# libmasc

./: CMakeLists.txt  LICENSE  config.h.in  masc.pc.in
example/: filetree.c  ip4to6.c  jsonparser.c  passwd2json.c  reversed.c  rmlines.c  tcpclient.c  term.c  uci2json.c
include/: masc.h
include/masc/: argparse.h  array.h  bool.h  char.h  class.h  cstr.h  datetime.h  double.h  file.h  int.h  io.h  io_class.h  ip.h  iter.h  iterable.h  iterable_class.h  json.h  list.h  log.h  macro.h  map.h  math.h  mlevent.h  mloop.h  mltimer.h  mtrace.h  net.h  none.h  num.h  num_class.h  object.h  path.h  pointer.h  print.h  random.h  regex.h  serial.h  socket.h  str.h  tcpclient.h  (+2 more)
memtracer/: mtrace.c
resources/: alltypes.json  fail.json  john_doe.json  math.json
resources/uci/: network
src/: argparse.c  array.c  bool.c  char.c  class.c  cstr.c  datetime.c  datetime_parse.c  double.c  file.c  int.c  io.c  io_class.c  ip.c  iter.c  iterable.c  iterable_class.c  json.c  json_parse.c  list.c  log.c  map.c  math.c  mloop.c  net.c  none.c  num.c  num_class.c  object.c  path.c  pointer.c  print.c  random.c  regex.c  serial.c  socket.c  str.c  tcpclient.c  tcpserver.c
src/argparse/: arg.c  arg.h
src/mloop/: event.c  fd.c  fd.h  fdpkg.c  fdpkg.h  fdreader.c  fdreader.h  io.c  io.h  iopkg.c  iopkg.h  ioreader.c  ioreader.h  proc.c  proc.h  timer.c  timer.h
src/utils/: hexdump.c  qicksort.c
test/: argparse.c  array.c  cstr.c  datetime.c  file.c  io.c  ip.c  iter.c  json.c  list.c  map.c  mloop.c  none.c  num.c  object.c  path.c  pointer.c  regex.c  socket.c  str.c  test_array.c  test_list.c  test_map.c  test_object.c  test_str.c
